cmake_minimum_required(VERSION 3.21)
project(AoC21)

set(CMAKE_CXX_STANDARD 17)

add_executable(AoC21_day1_task1 main_day1_task1.cpp)
add_executable(AoC21_day1_task2 main_day1_task2.cpp)
add_executable(AoC21_day2_task1 main_day2_task1.cpp)
add_executable(AoC21_day2_task2 main_day2_task2.cpp)
add_executable(AoC21_day3_task1 main_day3_task1.cpp)
add_executable(AoC21_day3_task2 main_day3_task2.cpp)
add_executable(AoC21_day4_task1 main_day4_task1.cpp classes/bingo_board.cpp include/bingo_board.h util/bingo_board_util.cpp include/bingo_board_util.h)
add_executable(AoC21_day4_task2 main_day4_task2.cpp classes/bingo_board.cpp include/bingo_board.h util/bingo_board_util.cpp include/bingo_board_util.h)
add_executable(AoC21_day5_task1 main_day5_task1.cpp classes/point.cpp include/point.h classes/line.cpp include/line.h classes/plane.cpp include/plane.h util/plane_util.cpp include/plane_util.h)
add_executable(AoC21_day5_task2 main_day5_task2.cpp classes/point.cpp include/point.h classes/line.cpp include/line.h classes/plane.cpp include/plane.h util/plane_util.cpp include/plane_util.h)
add_executable(AoC21_day6_task1 main_day6_task1.cpp util/common_util.cpp include/common_util.h util/lanternfish_common.cpp include/lanternfish_common.h)
add_executable(AoC21_day6_task2 main_day6_task2.cpp util/common_util.cpp include/common_util.h util/lanternfish_common.cpp include/lanternfish_common.h)
add_executable(AoC21_day7_task1 main_day7_task1.cpp util/common_util.cpp include/common_util.h util/fuel_util.cpp include/fuel_util.h)
add_executable(AoC21_day7_task2 main_day7_task2.cpp util/common_util.cpp include/common_util.h util/fuel_util.cpp include/fuel_util.h)
add_executable(AoC21_day8_task1 main_day8_task1.cpp classes/display.cpp include/display.h util/common_util.cpp include/common_util.h)
add_executable(AoC21_day8_task2 main_day8_task2.cpp classes/display.cpp include/display.h util/common_util.cpp include/common_util.h)
add_executable(AoC21_day9_task1 main_day9_task1.cpp classes/height_map.cpp include/height_map.h util/height_map_util.cpp include/height_map_util.h)
add_executable(AoC21_day9_task2 main_day9_task2.cpp classes/height_map.cpp include/height_map.h util/height_map_util.cpp include/height_map_util.h)
add_executable(AoC21_day10_task1 main_day10_task1.cpp classes/chunk_parser.cpp)
add_executable(AoC21_day10_task2 main_day10_task2.cpp classes/chunk_parser.cpp)
add_executable(AoC21_day11_task1 main_day11_task1.cpp classes/octopus_map.cpp include/octopus_map.h util/octopus_util.cpp include/octopus_util.h)
add_executable(AoC21_day11_task2 main_day11_task2.cpp classes/octopus_map.cpp include/octopus_map.h util/octopus_util.cpp include/octopus_util.h)
